Fixes #21: support new gen-class instance methods